Fix select alignment problem.

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -186,8 +186,8 @@ a, img {
         font-size: inherit;
         height: inherit;
         line-height: inherit;
-        margin: 0;
-        padding: 0 12px 0 0;
+        margin: 0 0 0 -10px;
+        padding: 0 12px 0 10px;
         width: auto;
         &:focus {
             outline: 0;
